repair z-index in social icons

--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,10 @@ strong{
   transition: all 0.4s ease 0s !important;
 }
 
+#zIndex{
+  z-index: 1;
+}
+
 @media (max-width: 767px) {
   .tech-icons {
     margin: 10px !important;
